fix: валидные номера зачеток в тестах